[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/modules/character/character.gd" type="Script" id=1]
[ext_resource path="res://core/modules/character/system.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 374.767, 374.766 )

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.701961, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.4, 0.4, 0.4, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("System")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "call_after_death"
} ]
}

[node name="Character" type="RigidBody2D"]
linear_damp = 6.0
angular_damp = 8.0
script = ExtResource( 1 )

[node name="System" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
visible = false
rotation = 1.57079
zoom = Vector2( 1.3, 1.3 )

[node name="RayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 100, 0 )

[node name="Sight" type="Area2D" parent="."]
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Sight"]
position = Vector2( 480, 3.05176e-05 )
rotation = 0.785397
shape = SubResource( 2 )

[node name="DashTimer" type="Timer" parent="."]

[node name="StateTimer" type="Timer" parent="."]

[node name="AITimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="AISystems" type="Node" parent="."]

[node name="LeftSholder" type="Node2D" parent="."]
position = Vector2( 0, -50 )
scale = Vector2( 1, -1 )

[node name="RightSholder" type="Node2D" parent="."]
position = Vector2( 0, 50 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 3 )
anims/Death = SubResource( 4 )
[connection signal="body_entered" from="Sight" to="System" method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="System" method="_on_Sight_body_exited"]
[connection signal="timeout" from="AITimer" to="System" method="_on_AITimer_timeout"]
